WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223914
Account for "hanging" and "each-line" when blending text-interpolation
https://bugs.webkit.org/show_bug.cgi?id=223914
Summary
Account for "hanging" and "each-line" when blending text-interpolation
Antoine Quint
Reported
2021-03-30 00:38:11 PDT
These new keywords are being enabled as part of
bug 223851
and we need to deal with them when blending.
Attachments
Patch
(35.73 KB, patch)
2021-03-30 00:45 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-03-30 00:45:46 PDT
Created
attachment 424619
[details]
Patch
EWS
Comment 2
2021-03-30 12:06:51 PDT
Committed
r275224
: <
https://commits.webkit.org/r275224
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424619
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-03-30 12:07:30 PDT
<
rdar://problem/76015470
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug