Account for "hanging" and "each-line" when blending text-interpolation https://bugs.webkit.org/show_bug.cgi?id=223914

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-text/animations/text-indent-composition-expected.txt:
* web-platform-tests/css/css-text/animations/text-indent-interpolation-expected.txt:

Source/WebCore:

* animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):


git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275224 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/235918@main